add delete stores
